--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -28,8 +28,10 @@
     # drone_validate_plugin_endpoint: //public address here
     docker_runner_capacity: 20
 
-    drone_user_create: meganime
-    drone_user_filter: meganime
+    drone_user_create: cgrates
+    drone_user_filter: 
+      - cgrates
+      - meganime
     ###############################################################
     # CGRateS vars
     dependencies:
