--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -32,6 +32,7 @@
     drone_user_filter: 
       - meganime
       - arbkat
+      - megameganime
     ###############################################################
     # CGRateS vars
     dependencies:
