--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,8 @@ steps:
 - name: notify
   image: drillster/drone-email
   settings:
-    from: arber.katellari@itsyscom.com
+    from.address: arber.katellari@itsyscom.com
+    from.name: DroneMail
     host: smtp.gmail.com
     username: 
       from_secret: email_username
@@ -35,6 +36,7 @@ steps:
       Commit link: {{ commit.link }}
     recipients:
       - morganfreeman005@gmail.com
+      - arber0katellari@gmail.com
   when:
     status: failure
 
