--- a/.drone.yml
+++ b/.drone.yml
@@ -37,6 +37,7 @@ steps:
     recipients:
       - morganfreeman005@gmail.com
       - arber.katellari@itsyscom.com
+      - ionut.boangiu@itsyscom.com
   when:
     status: failure
 
