--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
 - name: notify
   image: drillster/drone-email
   settings:
-    from.address: arber0katellari@gmail.com
+    from.address: noreply@gmail.com
     from.name: DroneMail
     host: smtp.gmail.com
     username: 
