--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,8 @@ steps:
   pull: never
   image: drillster/drone-email
   settings:
-    from: cgrates.test01@gmail.com
+    from.address: cgrates.test01@gmail.com
+    from.name: DroneEmail
     host: smtp.gmail.com
     username: 
       from_secret: email_username
@@ -60,7 +61,8 @@ steps:
 #   pull: never
 #   image: drillster/drone-email
 #   settings:
-#     from: cgrates.test01@gmail.com
+#     from.address: cgrates.test01@gmail.com
+#     from.name: DroneEmail
 #     host: smtp.gmail.com
 #     username: 
 #       from_secret: email_username
@@ -104,7 +106,8 @@ steps:
 #   pull: never
 #   image: drillster/drone-email
 #   settings:
-#     from: cgrates.test01@gmail.com
+#     from.address: cgrates.test01@gmail.com
+#     from.name: DroneEmail
 #     host: smtp.gmail.com
 #     username: 
 #       from_secret: email_username
@@ -148,7 +151,8 @@ steps:
 #   pull: never
 #   image: drillster/drone-email
 #   settings:
-#     from: cgrates.test01@gmail.com
+#     from.address: cgrates.test01@gmail.com
+#     from.name: DroneEmail
 #     host: smtp.gmail.com
 #     username: 
 #       from_secret: email_username
@@ -192,7 +196,8 @@ steps:
 #   pull: never
 #   image: drillster/drone-email
 #   settings:
-#     from: cgrates.test01@gmail.com
+#     from.address: cgrates.test01@gmail.com
+#     from.name: DroneEmail
 #     host: smtp.gmail.com
 #     username: 
 #       from_secret: email_username
