--- a/data/tutorial_tests/kamevapi/kamailio/etc/kamailio/kamailio.cfg
+++ b/data/tutorial_tests/kamevapi/kamailio/etc/kamailio/kamailio.cfg
@@ -15,10 +15,10 @@
 debug=2
 log_stderror=no
 
-listen=udp:enp0s8:5060
+listen=udp:172.19.0.2:5060
 listen=udp:127.0.0.1:5080
 listen=udp:127.0.0.1:5060
-listen=udp:enp0s8:5080
+listen=udp:172.19.0.2:5080
 
 memdbg=5
 memlog=5
